--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   </head>
   <body>
     <h1>NARF</h1>
+    <ul>NARF
+      <li>narkf</li>
+      <li>narf</li>
+    </ul>
+    <ol>FARN
+    <li>narf</li>
+    <li>narf</li>
+    </ol>
    <p>narf narf</p>
    <p>narf narf</p>
   </body>
