--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>NARF</title>
+    <title>NARF</title>
   </head>
   <body>
-    <h1>NARF</h1>
+    <div>
+      <h1>NARF</h1>
+    </div>
     <ol>
       <li>1</li>
       <li>2</li>
