--- a/index.html
+++ b/index.html
@@ -4,21 +4,19 @@
     <title>NARF</title>
   </head>
   <body>
-    <div>
+    <header>
       <h1>NARF</h1>
-    </div>
-    <ol>
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-    </ol>
+    </header>
+    <nav>
     <ul>
       <li>1</li>
       <li>2</li>
       <li>3</li>
     </ul>
-  
+    </nav>
+  <main>
    <p>narf narf</p>
    <p>narf narf</p>
+  </main>
   </body>
 </html>
