--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Collapsible Group 1</a>
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">Technical Skills</a>
         </h4>
       </div>
       <div id="collapse1" class="panel-collapse collapse in">
