--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
   <title>Amanda Jopp</title>
 </head>
 <body>
-   <div class="jumbotron text-center">
+   <div class="jumbotron">
     <h1><b>AMANDA JOPP</b></h1>
   <h2 class=>Digital Content Creator</h2>
   </div>
  
   
 <div class="container">
+  <div id="contact text-center">
   <div class="row">
   <div class="col-md-12">
          <h3>612.979.5479 / amandacjopp@gmail.com / <a href="https://www.linkedin.com/in/amandajopp">LinkedIn</a></h3>
+  </div>
   </div>
   </div>
      
