--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  
   
 <div class="container">
-  <div id="contact text-center">
+  <div id="contact">
   <div class="row">
   <div class="col-md-12">
          <h3>612.979.5479 / amandacjopp@gmail.com / <a href="https://www.linkedin.com/in/amandajopp">LinkedIn</a></h3>
