--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
    <div class="jumbotron">
-    <h1><b>AMANDA JOPP</b></h1>
-  <h2 class=>Digital Content Creator</h2>
+    <h1>AMANDA JOPP</h1>
+  <h2>Digital Content Creator</h2>
   </div>
  
   
