--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
       <h3><b><i>Work Experience</i></b></h3>
       
       <div id="content-RedBalloon">
+        <div class="date">
         <h4><b>Digital Marketing Coordinator</b></h4>
           <h4>Red Balloon Bookshop;<i> St. Paul, MN</i></h4>
           <h4>Nov. 2015 - Present</h4>
+          </div>
         
         <div class="work-summary">
           <ul>
