--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <div id="content-RedBalloon">
         <div class="date">
         <h4><b>Digital Marketing Coordinator</b></h4>
-          <h4>Red Balloon Bookshop;<i> St. Paul, MN</i></h4>
-          <h4>Nov. 2015 - Present</h4>
+          <p>Red Balloon Bookshop;<i> St. Paul, MN</i></p>
+          <p>Nov. 2015 - Present</p>
           </div>
         
         <div class="work-summary">
