--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="date">
         <h4><b>Communications Coordinator</b></h4>
           <p>Braun Intertec Corporation; Minneapolis, MN</p>
-          <h4>Mar. 2015 - Jul. 2015</h4>
+          <p>Mar. 2015 - Jul. 2015</p>
           </div>
   
         <div class="work-summary">
