--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
      <h3><b><i>Education</i><b></h3>
     </div>
     <div class="content-date">
-      <h4>Bachelor of Journalism; <i>University of Missouri-Columbia</i></h4>
+      <h4>Bachelor of Journalism; University of Missouri-Columbia</h4>
       <h4>May 2010</h4>
       <ul>
         <li><h5>Minor in Film Studies</h5></li>
