--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="contact">
   <div class="row">
   <div class="col-md-12">
-         <h3>612.979.5479 / amandacjopp@gmail.com / <a href="https://www.linkedin.com/in/amandajopp">LinkedIn</a></h3>
+         <p>612.979.5479 / amandacjopp@gmail.com / <a href="https://www.linkedin.com/in/amandajopp">LinkedIn</a></p>
   </div>
   </div>
   </div>
