--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     
     <div id="container-work">
       <div class="col-md-8">
-      <h3 class="border-bottom border-style:solid"><b><i>Work Experience</i></b></h3>
+      <h3 class><b><i>Work Experience</i></b></h3>
       
       <div id="content-RedBalloon">
         <div class="date">
