--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Amanda Jopp</title>
 </head>
@@ -16,7 +17,7 @@
   <div id="contact">
   <div class="row">
   <div class="col-md-12">
-         <p>612.979.5479 / amandacjopp@gmail.com / <a href="https://www.linkedin.com/in/amandajopp">LinkedIn</a></p>
+         <p>612.979.5479 / amandacjopp@gmail.com / <i class="fa fa-linkedin" aria-hidden="true"><a href="https://www.linkedin.com/in/amandajopp"></a></i></p>
   </div>
   </div>
   </div>
