--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="contact">
   <div class="row">
   <div class="col-md-12">
-         <p>612.979.5479 / amandacjopp@gmail.com / <i class="fa fa-linkedin" aria-hidden="true"><a href="https://www.linkedin.com/in/amandajopp"></a></i></p>
+         <p>612.979.5479 / amandacjopp@gmail.com / <a href="https://www.linkedin.com/in/amandajopp"><i class="fa fa-linkedin" aria-hidden="true"></i></a></p>
   </div>
   </div>
   </div>
