--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
     <div class="col-md-12">
       <h3><b>Technical Skills</b></h3>
       <div style="float:left; width: 50%;">
-    <ul>
-      <li>Photoshop, InDesign</li>
-      <li>Microsoft Office Suite</li>
-      <li>Constant Contact, Vertical Response, MailChimp</li>
-        <li>Twitter, Facebook, Instagram, Pinterest, Youtube, Snapchat, Hootsuite</li>
+    <ul class="fa-ul">
+      <li><i class="fa-li fa fa-cogs">Photoshop, InDesign</i></li>
+      <li><i class="fa-li fa fa-cogs">Microsoft Office Suite</i></li>
+      <li><i class="fa-li fa fa-cogs">Constant Contact, Vertical Response, MailChimp</i></li>
+        <li><i class="fa-li fa fa-cogs">Twitter, Facebook, Instagram, Pinterest, Youtube, Snapchat, Hootsuite</i></li>
         </ul>
       </div>
         <div style="float:right; width: 50%;">
-          <ul>
-      <li>WordPress, Drupal, DotNetNuke</li>
-      <li>Google Analytics, Google AdWords</li>
-      <li>HTML</li>
-         <ul>
+          <ul class="fa-ul">
+      <li><i class="fa-li fa fa-cogs">WordPress, Drupal, DotNetNuke</i></li>
+      <li><i class="fa-li fa fa-cogs">Google Analytics, Google AdWords</i></li>
+      <li><i class="fa-li fa fa-cogs">HTML</i></li>
+         </ul>
            </div>
       </div>
     </div>
