--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h3><b>Technical Skills</b></h3>
       <div style="float:left; width: 50%;">
     <ul class="fa-ul">
-      <li><i class="fa-li fa fa-cogs">Photoshop, InDesign</i></li>
+      <li><i class="fa-li fa fa-cogs" aria-hidden="true">Photoshop, InDesign</i></li>
       <li><i class="fa-li fa fa-cogs">Microsoft Office Suite</i></li>
       <li><i class="fa-li fa fa-cogs">Constant Contact, Vertical Response, MailChimp</i></li>
         <li><i class="fa-li fa fa-cogs">Twitter, Facebook, Instagram, Pinterest, Youtube, Snapchat, Hootsuite</i></li>
