--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div id="container-technical">
   <div class="row">
     <div class="col-md-12">
-      <h3><b>Technical Skills</b></h3><i class="fa fa-cogs" aria-hidden="true"></i>
+      <h3><b>Technical Skills</b></h3>
       <div style="float:left; width: 50%;">
     <ul>
       <li>Photoshop, InDesign</li>
