--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div class="col-md-12">
       <h3><b>Technical Skills</b></h3>
       <div style="float:left; width: 50%;">
-    <ul>
-      <li>Photoshop, InDesign</li>
+    <ul class="fa-ul">
+      <li><i class="fa-li fa fa-cogs"></i>Photoshop, InDesign</li>
       <li>Microsoft Office Suite</li>
       <li>Constant Contact, Vertical Response, MailChimp</li>
         <li>Twitter, Facebook, Instagram, Pinterest, Youtube, Snapchat, Hootsuite</li>
