--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
       <div style="float:left; width: 50%;">
     <ul class="fa-ul">
       <li><i class="fa-li fa fa-cogs"></i>Photoshop, InDesign</li>
-      <li>Microsoft Office Suite</li>
-      <li>Constant Contact, Vertical Response, MailChimp</li>
-        <li>Twitter, Facebook, Instagram, Pinterest, Youtube, Snapchat, Hootsuite</li>
+      <li><i class="fa-li fa fa-cogs"></i>Microsoft Office Suite</li>
+      <li><i class="fa-li fa fa-cogs"></i>Constant Contact, Vertical Response, MailChimp</li>
+        <li><i class="fa-li fa fa-cogs"></i>Twitter, Facebook, Instagram, Pinterest, Youtube, Snapchat, Hootsuite</li>
         </ul>
       </div>
         <div style="float:right; width: 50%;">
-          <ul>
-      <li>WordPress, Drupal, DotNetNuke</li>
-      <li>Google Analytics, Google AdWords</li>
-      <li>HTML</li>
+          <ul class="fa-ul">
+      <li><i class="fa-li fa fa-cogs"></i>WordPress, Drupal, DotNetNuke</li>
+      <li><i class="fa-li fa fa-cogs"></i>Google Analytics, Google AdWords</li>
+      <li><i class="fa-li fa fa-cogs"></i>HTML</li>
          </ul>
            </div>
       </div>
