--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="contact">
   <div class="row">
   <div class="col-md-12">
-         <p>612.979.5479 / <a href="mailto:amandacjopp@gmail.com><i class="fa fa-envelope" aria-hidden="true"></i></a> / <a href="https://www.linkedin.com/in/amandajopp"><i class="fa fa-linkedin" aria-hidden="true"></i></a></p>
+         <p>612.979.5479 / <a href="mailto:amandacjopp@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a> / <a href="https://www.linkedin.com/in/amandajopp"><i class="fa fa-linkedin" aria-hidden="true"></i></a></p>
   </div>
   </div>
   </div>
