--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
       
       <div id="content-patio">
         <div class="date">
-        <h4><b>Freelance Social Media Editor & Blogger</b></h4>
-          <p>Patio & Hearth Products Report; Torrance, CA</p>
+        <h4><b>Freelance Social Media Editor and Blogger</b></h4>
+          <p>Patio and Hearth Products Report; Torrance, CA</p>
           <p>Oct. 2010 - Apr. 2012</p>
           </div>
        
