--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
   <div class="row">
     <div class="col-md-12">
       <h3><b>Technical Skills</b></h3>
-     <div id="columns">
-       <ul>
+       <ul class ="list">
       <li>Photoshop, InDesign</li>
       <li>Microsoft Office Suite</li>
       <li>Constant Contact, Vertical Response, MailChimp</li>
@@ -37,7 +36,6 @@
       <li>Google Analytics, Google AdWords</li>
       <li>HTML</li>
          </ul>
-       </div>
       </div>
     </div>
   </div>
