--- a/index.html
+++ b/index.html
@@ -23,19 +23,25 @@
   </div>
   </div>
      
-<div id="container-technical">
+div id="container-technical">
   <div class="row">
     <div class="col-md-12">
       <h3><b>Technical Skills</b></h3>
-       <ul class ="list">
-      <li>Photoshop, InDesign</li>
-      <li>Microsoft Office Suite</li>
-      <li>Constant Contact, Vertical Response, MailChimp</li>
-      <li>Twitter, Facebook, Instagram, Pinterest, Youtube, Snapchat, Hootsuite</li>
-      <li>WordPress, Drupal, DotNetNuke</li>
-      <li>Google Analytics, Google AdWords</li>
-      <li>HTML</li>
+      <div style="float:left; width: 50%;">
+    <ul class="fa-ul">
+      <li><i class="fa-li fa fa-cogs"></i>Photoshop, InDesign</li>
+      <li><i class="fa-li fa fa-cogs"></i>Microsoft Office Suite</li>
+      <li><i class="fa-li fa fa-cogs"></i>Constant Contact, Vertical Response, MailChimp</li>
+        <li><i class="fa-li fa fa-cogs"></i>Twitter, Facebook, Instagram, Pinterest, Youtube, Snapchat, Hootsuite</li>
+        </ul>
+      </div>
+        <div style="float:right; width: 50%;">
+          <ul class="fa-ul">
+      <li><i class="fa-li fa fa-cogs"></i>WordPress, Drupal, DotNetNuke</li>
+      <li><i class="fa-li fa fa-cogs"></i>Google Analytics, Google AdWords</li>
+      <li><i class="fa-li fa fa-cogs"></i>HTML</li>
          </ul>
+           </div>
       </div>
     </div>
   </div>
