--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
   </div>
      
-div id="container-technical">
+<div id="container-technical">
   <div class="row">
     <div class="col-md-12">
       <h3><b>Technical Skills</b></h3>
