--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <div class="jumbotron">
     <h1>AMANDA JOPP</h1>
-      <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/000/0f9/05c/2f7d13f.jpg" alt="headshot" style="float:top left;">
+      <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/000/0f9/05c/2f7d13f.jpg" alt="headshot" style="float:left;">
   <h2>Digital Content Creator</h2>
   </div>
  
