--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <title>Amanda Jopp</title>
 </head>
 <body>
-   <div class="jumbotron">
+   <header>
     <h1>AMANDA JOPP</h1>
   <h2>Digital Content Creator</h2>
-  </div>
+  </header>
  
+ <aside>
+    
+ <aside>
   
 <div class="container">
   <div id="contact">
