--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
  
  <aside>
     <p>612.9XX.XXXX / <a href="mailto:amandacjopp@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a> / <a href="https://www.linkedin.com/in/amandajopp"><i class="fa fa-linkedin" aria-hidden="true"></i></a></p>
- </aside>
+    <h5>Technical Skills</h5>
+    <ul>
+       <li>Microsoft Office Suite</li>
+       <li>Constant Contact, Vertical Response, MailChimp</li>
+       <li>Twitter, Facebook, Instagram, Pinterest, Youtube, SnapChat, Hootsuite</li>
+       <li>WordPress, Drupal, DotNetNuke</li>
+       <li>HTML</li>
+    </ul>
+   </aside>
     
     <div id="container-work">
       <div class="col-md-6">
