--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
        <li>WordPress, Drupal, DotNetNuke</li>
        <li>HTML</li>
     </ul>
+    <h4>Education</h4>
+    <p>Unveristy of Missouri-Columbia; May 2010</p>
+    <p>Bachelors of Journalism<p>
    </aside>
     
     <div id="container-work">
