--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
  
  <aside>
-    <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/000/0f9/05c/2f7d13f.jpg" alt="headshot" style="height:200px;width= 200px;">
+    <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/000/0f9/05c/2f7d13f.jpg" alt="headshot" style="height:200px;width= 200px;" float="center">
     <p>612.9XX.XXXX / <a href="mailto:amandacjopp@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a> / <a href="https://www.linkedin.com/in/amandajopp"><i class="fa fa-linkedin" aria-hidden="true"></i></a></p>
     <h4>Technical Skills</h4>
     <ul>
