--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h1>AMANDA JOPP</h1>
   <h2>Digital Content Creator</h2>
   </header>
- 
+   
+ <div class="container">
  <aside>
     <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/000/0f9/05c/2f7d13f.jpg" alt="headshot" align="middle" style="height:200px;width= 200px;">
     <p>612.9XX.XXXX / <a href="mailto:amandacjopp@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a> / <a href="https://www.linkedin.com/in/amandajopp"><i class="fa fa-linkedin" aria-hidden="true"></i></a></p>
@@ -130,6 +131,6 @@
       </div>
       </div>
     </div>
-      
+   </div>    
   </body>
 </html>
