--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
    </aside>
     
     <div id="container-work">
+       <div class="row">
       <div class="col-md-3">
       <h3 class><b>Work Experience</b></h3>
       
