--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   </header>
    
  <div class="container">
+    <div class="row">
+       <div class="col-md-6">
  <aside>
     <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/000/0f9/05c/2f7d13f.jpg" alt="headshot" align="middle" style="height:200px;width= 200px;">
     <p>612.9XX.XXXX / <a href="mailto:amandacjopp@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a> / <a href="https://www.linkedin.com/in/amandajopp"><i class="fa fa-linkedin" aria-hidden="true"></i></a></p>
@@ -29,10 +31,12 @@
     <p>Unveristy of Missouri-Columbia; May 2010</p>
     <p>Bachelors of Journalism<p>
    </aside>
+       </div>
+    </div>
     
     <div id="container-work">
        <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-6">
       <h3 class><b>Work Experience</b></h3>
       
       <div id="content-RedBalloon">
